# rtmidi

./: .codecov.yml  .dir-locals.el  .gitignore  .travis.yml  Makefile.am  Makefile.library  README.md  RtMidi.cpp  RtMidi.h  aminclude_static.am  appveyor.yml  autogen.sh  configure.ac  configure.library  configure.version  rtmidi-config.in  rtmidi.pc.in  rtmidi_c.cpp  rtmidi_c.h
doc/: Makefile.am
doc/doxygen/: Doxyfile.in  tutorial.txt
po/: POTFILES.in  de.gmo  de.po  rtmidi-ts.pot
rtmidi-m4/: rtmidi_lib_coremidi.m4  rtmidi_lib_dummy.m4  rtmidi_lib_jack.m4
src/: ALSA.cpp  ALSA.h  Dummy.cpp  JACK.cpp  JACK.h  Makefile.am  OSXCoreMidi.cpp  OSXCoreMidi.h  RtMidi-internal.h  RtMidi.cpp  WinMM.cpp  rtmidi_c.cpp
tests/: Makefile.am  apinames.cpp  cmidiin.cpp  cmidiin2.cpp  copyonwrite.cpp  errors.cpp  loopback-device.cpp  loopback.cpp  lostportdescriptor.cpp  midiclock.cpp  midiout.cpp  midiout2.cpp  midiprobe-all.cpp  midiprobe.cpp  midiprobe2.cpp  qmidiin.cpp  qmidiin2.cpp  run-cmidiio.in  run-cmidiio2.in  run-external-loop  run-midiclockio.cmp  run-midiclockio.in  run-qmidiio  run-qmidiio.cmp  run-qmidiio.in  run-qmidiio2.in  run-sysextest.in  run-virt-cmidiio.in  run-virt-cmidiio2.in  run-virt-midiclockio.in  run-virt-qmidiio2.in  run-virt-sysextest.in  sequencerportlist.cpp  sysextest.cpp  test-common.cpp  test-common.h  testequalityoperator.cpp
