RTMIDISOURCES = \
  %D%/RtMidi.cpp \
  %D%/RtMidi-internal.h \
  %D%/rtmidi_c.cpp

RTMIDIJACKSOURCES = \
  %D%/JACK.cpp \
  %D%/JACK.h

RTMIDIALSASOURCES = \
  %D%/ALSA.cpp \
  %D%/ALSA.h

RTMIDIWINKSSOURCES = \
  %D%/WinKS.cpp \
  %D%/WinKS.h

RTMIDIWINMMSOURCES = \
  %D%/WinMM.cpp \
  %D%/WinMM.h

RTMIDIOSXSOURCES = \
  %D%/OSXCoreMidi.cpp \
  %D%/OSXCoreMidi.h

RTMIDIDUMMYSOURCES = \
  %D%/Dummy.cpp \
  %D%/Dummy.h

if HAVE_JACK
RTMIDISOURCES += $(RTMIDIJACKSOURCES)
else
EXTRA_DIST += $(RTMIDIJACKSOURCES)
endif

if HAVE_ALSA
RTMIDISOURCES += $(RTMIDIALSASOURCES)
else
EXTRA_DIST += $(RTMIDIALSASOURCES)
endif

if HAVE_WINMM
RTMIDISOURCES += $(RTMIDIWINMMSOURCES)
else
EXTRA_DIST += $(RTMIDIWINMMSOURCES)
endif

if HAVE_WINKS
RTMIDISOURCES += $(RTMIDIWINKSSOURCES)
else
EXTRA_DIST += $(RTMIDIWINKSSOURCES)
endif

if HAVE_COREMIDI
RTMIDISOURCES += $(RTMIDIOSXSOURCES)
else
EXTRA_DIST += $(RTMIDIOSXSOURCES)
endif

if HAVE_DUMMY
RTMIDISOURCES += $(RTMIDIDUMMYSOURCES)
else
EXTRA_DIST += $(RTMIDIDUMMYSOURCES)
endif
