RTMIDISOURCES = \
  %D%/RtMidi.cpp \
  %D%/RtMidi-internal.h \
  %D%/rtmidi_c.cpp

RTMIDIJACKSOURCES = \
  %D%/JACK.cpp \
  %D%/JACK.h

RTMIDIALSASOURCES = \
  %D%/ALSA.cpp \
  %D%/ALSA.h

RTMIDIWINKSSOURCES = \
  %D%/WinKS.cpp \
  %D%/WinKS.h

RTMIDIWINMMSOURCES = \
  %D%/WinMM.cpp \
  %D%/WinMM.h

RTMIDIOSXSOURCES = \
  %D%/OSXCoreMidi.cpp \
  %D%/OSXCoreMidi.h

RTMIDIDUMMYSOURCES = \
  %D%/Dummy.cpp \
  %D%/Dummy.h

if HAVE_JACK
RTMIDISOURCES += $(RTMIDIJACKSOURCES)
AM_DISTCHECK_CONFIGURE_FLAGS += --with-jack
else
EXTRA_DIST += $(RTMIDIJACKSOURCES)
endif

if HAVE_ALSA
RTMIDISOURCES += $(RTMIDIALSASOURCES)
AM_DISTCHECK_CONFIGURE_FLAGS += --with-alsa
else
EXTRA_DIST += $(RTMIDIALSASOURCES)
endif

if HAVE_WINMM
RTMIDISOURCES += $(RTMIDIWINMMSOURCES)
AM_DISTCHECK_CONFIGURE_FLAGS += --with-winmm
else
EXTRA_DIST += $(RTMIDIWINMMSOURCES)
endif

if HAVE_WINKS
RTMIDISOURCES += $(RTMIDIWINKSSOURCES)
AM_DISTCHECK_CONFIGURE_FLAGS += --with-winks
else
EXTRA_DIST += $(RTMIDIWINKSSOURCES)
endif

if HAVE_COREMIDI
RTMIDISOURCES += $(RTMIDIOSXSOURCES)
AM_DISTCHECK_CONFIGURE_FLAGS += --with-coremidi
else
EXTRA_DIST += $(RTMIDIOSXSOURCES)
endif

if HAVE_DUMMY
RTMIDISOURCES += $(RTMIDIDUMMYSOURCES)
AM_DISTCHECK_CONFIGURE_FLAGS += --with-dummy
else
EXTRA_DIST += $(RTMIDIDUMMYSOURCES)
endif
